# sallos

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example.cpp
include/sallos/: checksum.h  communication.h  crc_16.hpp  pack_util.h  packer.h  protocol.hpp  protocol_data.h  protocol_pack.h  serial.cpp  serial.h
include/sallos/checker/: checker.h  checksum.h
include/sallos/communicator/: communicator.h
include/sallos/diabase/: diabase.h
include/sallos/protocol/: frame.h  protocol_data.h
include/sallos/utils/: bit.h  pack_macro.h  plain_continuous.h  sequence_factory.h
src/: sallos.cpp
